Added more variables to file

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,4 +2,9 @@
   --main-bg-color: #181818;
   --site-width: 80%;
   --white: #fff;
+  --gray: #686868;
+  --dark-gray: #121212;
+  --text-color: #fff;
+  --main-font: 'Bellefair', serif;
+  --text-font: 'Barlow Regular', sans-serif;
 }
