Fixed issue with the max width

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,10 +1,11 @@
 :root {
+  --site-width: 80%;
+  --site-max-width: 1360px;
   --main-bg-color: #181818;
-  --site-width: 70%;
-  --white: #fff;
+  --text-color: #fff;
   --gray: #686868;
   --dark-gray: #121212;
-  --text-color: #fff;
+  --white: #fff;
   --main-font: 'Bellefair', serif;
   --text-font: 'Barlow Regular', sans-serif;
 }
