Created the Posts plot component

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -8,4 +8,6 @@
   --white: #fff;
   --main-font: 'Bellefair', serif;
   --text-font: 'Barlow Regular', sans-serif;
+  --gutter: 3em;
+  --text-line-height: 1.2;
 }
