added header title and deacription to pages

--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -2,7 +2,8 @@
   0% {
     transform: rotate(0deg);
   }
-  100% { 
+
+  100% {
     transform: rotate(-360deg);
   }
 }
@@ -19,4 +20,27 @@
   }
 }
 
+// Menu
+@keyframes grow-full-bar {
+  0% {
+    width: 0;
+    opacity: 1;
+  }
 
+  100% {
+    width: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes grow-sxt-bar {
+  0% {
+    width: 0;
+    opacity: 1;
+  }
+
+  100% {
+    width: 60%;
+    opacity: 1;
+  }
+}
