--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -12,6 +12,7 @@
     --gutter: 3em;
     --text-line-height: 1.2;
     --text-font-size: 1vw;
+    --hide-loading-delay: .3s;
   }
 }
 
@@ -29,6 +30,7 @@
     --gutter: 2em;
     --text-line-height: 1.2;
     --text-font-size: 1.5vw;
+    --hide-loading-delay: .3s;
   }
 }
 
@@ -46,6 +48,7 @@
     --gutter: 1em;
     --text-line-height: 1.2;
     --text-font-size: 2.5vw;
+    --hide-loading-delay: .3s;
   }
 }
 
@@ -63,5 +66,6 @@
     --gutter: 1em;
     --text-line-height: 1.2;
     --text-font-size: 3.5vw;
+    --hide-loading-delay: .3s;
   }
 }
