--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -44,3 +44,11 @@
     opacity: 1;
   }
 }
+
+// Transitions
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 1s;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
