modified readme and fixed tests

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
   :root {
     --site-width: 80%;
     --site-max-width: 1360px;
+    --yellow: rgba(255,229,123, .99);
     --main-bg-color: #181818;
     --text-color: #fff;
     --gray: #686868;
@@ -20,6 +21,7 @@
   :root {
     --site-width: 90%;
     --site-max-width: 1360px;
+    --yellow: rgba(255,229,123, .99);
     --main-bg-color: #181818;
     --text-color: #fff;
     --gray: #686868;
@@ -38,6 +40,7 @@
   :root {
     --site-width: 90%;
     --site-max-width: 1360px;
+    --yellow: rgba(255,229,123, .99);
     --main-bg-color: #181818;
     --text-color: #fff;
     --gray: #686868;
@@ -56,6 +59,7 @@
   :root {
     --site-width: 90%;
     --site-max-width: 1360px;
+    --yellow: rgba(255,229,123, .99);
     --main-bg-color: #181818;
     --text-color: #fff;
     --gray: #686868;
